SQL FULL OUTER JOIN clause

--- a/index.html
+++ b/index.html
@@ -1049,7 +1049,33 @@
     </ul>
 
     <p><strong>Note: The RIGHT JOIN keyword returns all records from the right table (Employees), even if there are no matches in the left table (Orders).</strong></p>
-    
+
+
+    <h1>SQL FULL OUTER JOIN Keyword</h1>
+    <p>The FULL OUTER JOIN keyword returns all records when there is a match in left (table1) or right (table2) table records.</p>
+    <p><strong>Tip: FULL OUTER JOIN and FULL JOIN are the same.</strong></p>
+
+    <ul>
+        <li>SELECT column_name(s)</li>
+        <li>FROM table1</li>
+        <li>FULL OUTER JOIN table2</li>
+        <li>ON table1.column_name = table2.column_name</li>
+        <li>WHERE condition;</li>
+    </ul>
+
+    <p><strong>Note: FULL OUTER JOIN can potentially return very large result-sets!</strong></p>
+
+    <p>The following SQL statement selects all customers, and all orders:</p>
+    <ul>
+        <li>SELECT Customers.CustomerName, Orders.OrderID</li>
+        <li>FROM Customers</li>
+        <li>FULL OUTER JOIN Orders ON Customers.CustomerID=Orders.CustomerID</li>
+        <li>ORDER BY Customers.CustomerName;</li>
+    </ul>
+
+    <p><strong>Note: The FULL OUTER JOIN keyword returns all matching records from both tables whether the other table matches or not. So, if there are rows in "Customers" that do not have matches in "Orders", or if there are rows in "Orders" that do not have matches in "Customers", those rows will be listed as well.</strong></p>
+
+    <h1>SQL Self Join</h1>
 
 
     
