--- a/index.html
+++ b/index.html
@@ -1097,6 +1097,33 @@
 
     <p><strong> this <>  sign is - not equal to - sign</strong></p>
 
+    <h1>SQL UNION Operator</h1>
+    <p>The UNION operator is used to combine the result-set of two or more SELECT statements.</p>
+
+    <ul>
+        <li>Every SELECT statement within UNION must have the same number of columns</li>
+        <li>The columns must also have similar data types</li>
+        <li>The columns in every SELECT statement must also be in the same order</li>
+    </ul>
+
+    <p>union syntax is following:</p>
+
+    <ul>
+        <li>SELECT column_name(s) FROM table1</li>
+        <li>UNION</li>
+        <li>SELECT column_name(s) FROM table2;</li>
+    </ul>
+
+    <p>The UNION operator selects only distinct values by default. To allow duplicate values, use UNION ALL:</p>
+    <ul>
+        <li>SELECT column_name(s) FROM table1</li>
+        <li>UNION ALL</li>
+        <li>SELECT column_name(s) FROM table2;</li>
+    </ul>
+
+    <p><strong>Note: The column names in the result-set are usually equal to the column names in the first SELECT statement.</strong></p>
+
+    <p>The following SQL statement returns the cities (only distinct values) from both the "Customers" and the "Suppliers" table:</p>
 
     
 </body>
