--- a/index.html
+++ b/index.html
@@ -1297,6 +1297,7 @@
         <li>Where exists (select ProductName from Products Where Products.SupplierID = Suppliers.SupplierID and Price = 20);</li>
     </ul>
 
+    <h1>SQL ANY and ALL Operators</h1>
     
 
 
