--- a/index.html
+++ b/index.html
@@ -1380,6 +1380,70 @@
     </ul>
 
     <h1>SQL SELECT INTO Statement</h1>
+    <p>The SELECT INTO statement copies data from one table into a new table.</p>
+    <p>syntax of - Copy all columns into a new table:</p>
+    <ul>
+        <li>SELECT *</li>
+        <li>INTO newtable [IN externaldb]</li>
+        <li>FROM oldtable</li>
+        <li>WHERE condition;</li>
+    </ul>
+
+    <p>Copy only some columns into a new table:</p>
+    <ul>
+        <li>SELECT column1, column2, column3, ...</li>
+        <li>INTO newtable [IN externaldb]</li>
+        <li>FROM oldtable</li>
+        <li>WHERE condition;</li>
+    </ul>
+
+    <p>The new table will be created with the column-names and types as defined in the old table. You can create new column names using the AS clause.</p>
+
+    <p>The following SQL statement creates a backup copy of Customers:</p>
+    <ul>
+        <li>SELECT * INTO CustomersBackup2017</li>
+        <li>FROM Customers;</li>
+    </ul>
+
+    <p>The following SQL statement uses the IN clause to copy the table into a new table in another database:</p>
+    <ul>
+        <li>SELECT * INTO CustomersBackup2017 IN 'Backup.mdb'</li>
+        <li>FROM Customers;</li>
+    </ul>
+
+    <p>The following SQL statement copies only a few columns into a new table:</p>
+    <ul>
+        <li>SELECT CustomerName, ContactName INTO CustomersBackup2017</li>
+        <li>FROM Customers;</li>
+    </ul>
+
+    <p>The following SQL statement copies only the German customers into a new table:</p>
+    <ul>
+        <li>SELECT * INTO CustomersGermany</li>
+        <li>FROM Customers</li>
+        <li>WHERE Country = 'Germany';</li>
+    </ul>
+
+    <p>The following SQL statement copies data from more than one table into a new table:</p>
+
+    <ul>
+        <li>SELECT Customers.CustomerName, Orders.OrderID</li>
+        <li>INTO CustomersOrderBackup2017</li>
+        <li>FROM Customers</li>
+        <li>LEFT JOIN Orders ON Customers.CustomerID = Orders.CustomerID;</li>
+    </ul>
+
+    <p><strong>Tip: SELECT INTO can also be used to create a new, empty table using the schema of another. Just add a WHERE clause that causes the query to return no data:</strong></p>
+
+    <ul>
+        <li>SELECT * INTO newtable</li>
+        <li>FROM oldtable</li>
+        <li>WHERE 1 = 0;</li>
+    </ul>
+
+    
+
+    
 
 </body>
 </html>
