--- a/index.html
+++ b/index.html
@@ -1742,6 +1742,11 @@
 
 
     <h1>SQL Database</h1>
+    <p>The CREATE DATABASE statement is used to create a new SQL database.</p>
+    <p>Syntax is following:</p>
+    <ul>
+        <li>CREATE DATABASE databasename;</li>
+    </ul>
 
 
 
