check created database

--- a/index.html
+++ b/index.html
@@ -1748,6 +1748,12 @@
         <li>CREATE DATABASE databasename;</li>
     </ul>
 
+    <p>The following SQL statement creates a database called "testDB":</p>
+    <p>CREATE DATABASE testDB;</p>
+    <p><strong>Tip: Make sure you have admin privilege before creating any database. Once a database is created, you can check it in the list of databases with the following SQL command: SHOW DATABASES;</strong></p>
+
+    
+
 
 
 </body>
