SQL DROP DATABASE statement

--- a/index.html
+++ b/index.html
@@ -1753,6 +1753,7 @@
     <p><strong>Tip: Make sure you have admin privilege before creating any database. Once a database is created, you can check it in the list of databases with the following SQL command: SHOW DATABASES;</strong></p>
 
     
+    <h1>SQL DROP DATABASE statement</h1>
 
 
 
