SQL DROP Table / TRUNCATE table

--- a/index.html
+++ b/index.html
@@ -1871,6 +1871,41 @@
 
 
     <h1>SQL DROP TABLE </h1>
+    <p>
+        The DROP TABLE statement is used to drop an existing table in a database.
+
+        Syntax is following:
+        DROP TABLE table_name;
+    </p>
+
+    <p>
+        <strong>
+            Note: Be careful before dropping a table. Deleting a table will result in loss of complete information stored in the table!
+        </strong>
+    </p>
+
+    <h3>SQL DROP TABLE Example</h3>
+
+    <p>
+        The following SQL statement drops the existing table "Shippers":
+
+        DROP TABLE Shippers;
+
+    </p>
+
+    <h3>
+        SQL TRUNCATE TABLE
+    </h3>
+
+    <p>
+        The TRUNCATE TABLE statement is used to delete the data inside a table, but not the table itself.
+
+
+        syntax is following:
+        TRUNCATE TABLE table_name;
+    </p>
+
+    <h1>SQL ALTER TABLE</h1>
 
 
 
