SQL ALTER table
add modify or drop the column in table

--- a/index.html
+++ b/index.html
@@ -1907,6 +1907,61 @@
 
     <h1>SQL ALTER TABLE</h1>
 
+    <p>
+        The ALTER TABLE statement is used to add, delete, or modify columns in an existing table.
+        The ALTER TABLE statement is also used to add and drop various constraints on an existing table.
+
+        To add a column in a table, use the following syntax:
+
+        ALTER TABLE table_name
+        ADD column_name datatype;
+    </p>
+
+    <p>
+        The following SQL adds an "Email" column to the "Customers" table:
+        ALTER TABLE Customers
+        ADD Email varchar(255);
+    </p>
+
+    <p>
+        To delete a column in a table, use the following syntax (notice that some database systems don't allow deleting a column):
+
+
+        ALTER TABLE table_name
+        DROP COLUMN column_name;
+    </p>
+
+    <p>
+        The following SQL deletes the "Email" column from the "Customers" table:
+
+
+        ALTER TABLE Customers
+        DROP COLUMN Email;
+    </p>
+
+    <p>
+        To change the data type of a column in a table, use the following syntax:
+
+        SQL Server / MS Access:
+
+        ALTER TABLE table_name
+        ALTER COLUMN column_name datatype;
+
+        My SQL / Oracle (prior version 10G):
+
+
+        ALTER TABLE table_name
+        MODIFY COLUMN column_name datatype;    
+        
+        
+        Oracle 10G and later:
+
+        ALTER TABLE table_name
+        MODIFY column_name datatype;
+    </p>
+
+    <h1>SQL Constraints</h1>
+
 
 
 
