--- a/index.html
+++ b/index.html
@@ -1962,6 +1962,46 @@
 
     <h1>SQL Constraints</h1>
 
+    <p>
+        SQL constraints are used to specify rules for data in a table.
+        Constraints can be specified when the table is created with the CREATE TABLE statement, or after the table is created with the ALTER TABLE statement.
+
+
+        syntax is following:
+        CREATE TABLE table_name (
+            column1 datatype constraint,
+            column2 datatype constraint,
+            column3 datatype constraint,
+            ....
+        );
+    </p>
+
+    <h3>SQL Constraints</h3>
+
+    <p>
+        SQL constraints are used to specify rules for the data in a table.
+        Constraints are used to limit the type of data that can go into a table. This ensures the accuracy and reliability of the data in the table. If there is any violation between the constraint and the data action, the action is aborted.
+
+        Constraints can be column level or table level. Column level constraints apply to a column, and table level constraints apply to the whole table.
+
+    </p>
+
+    <p>
+        The following constraints are commonly used in SQL:
+    </p>
+    <ul>
+        <li>NOT NULL - Ensures that a column cannot have a NULL value</li>
+        <li>UNIQUE - Ensures that all values in a column are different</li>
+        <li>PRIMARY KEY - A combination of a NOT NULL and UNIQUE. Uniquely identifies each row in a table</li>
+        <li>FOREIGN KEY - Prevents actions that would destroy links between tables</li>
+        <li>CHECK - Ensures that the values in a column satisfies a specific condition</li>
+        <li>DEFAULT - Sets a default value for a column if no value is specified</li>
+        <li>CREATE INDEX - Used to create and retrieve data from the database very quickly</li>
+    </ul>
+
+
+    <h1>SQL NOT NULL Constraint</h1>
+
 
 
 
